# STM32BareMetal

./: .gitignore  CMakeLists.txt  link.ld  openocd.cfg
first/: CMakeLists.txt  main.c
second/: CMakeLists.txt  main.c
